various minor updates to documentation & code comments

--- a/CHANGES
+++ b/CHANGES
@@ -9,10 +9,10 @@ Release History
 
     Minor bugfix release
     
-    * FreeBSD 8.3+ has native support for SHA512-Crypt,
-      updated unittests and documentation accordingly (:issue:`35`)
+    * *bugfix*: FreeBSD 8.3 added native support for SHA512-Crypt,
+      updated unittests and documentation accordingly (:issue:`35`).
       
-    * Fixed bug in passlib.apache unittest which caused test to fail
+    * *bugfix:* Fixed bug in passlib.apache unittest which caused test to fail
       if filesystem had mtime resolution >= 1 second (:issue:`35`). 
       
     * Various documentation updates and corrections.
