--- a/CHANGES
+++ b/CHANGES
@@ -13,6 +13,8 @@ Release History
       would incorrectly raise :exc:`TypeError` if passed a :class:`!unicode`
       user category under Python 2; for compatibility
       they will now be treated the same as the equivalent ``utf-8`` :class:`bytes`.
+
+    * Reworked the internals of :class:`CryptContext`'s config compiler.
       
     * *bugfix*: FreeBSD 8.3 added native support for SHA512-Crypt,
       updated unittests and documentation accordingly (:issue:`35`).
