--- a/CHANGES
+++ b/CHANGES
@@ -28,17 +28,17 @@ Release History
     * *bugfix*: FreeBSD 8.3 added native support for :class:`~passlib.hash.sha256_crypt` --
       updated Passlib's unittests and documentation accordingly (:issue:`35`).
 
-    * *bugfix:* Fixed bug which caused passlib.apache unittest to fail
+    * *bugfix:* Fixed bug which caused some :mod:`!passlib.apache` unittests to fail
       if mtime resolution >= 1 second (:issue:`35`).
 
-    * Various bugfixes for Python 3.3 compatibility.
+    * *bugfix:* Fixed minor bug in :mod:`!passlib.registry`, should now work correctly under Python 3.3.
 
     * Various documentation updates and corrections.
 
+.. _whats-new:
+
 **1.6** (2012-05-01)
 ====================
-
-.. _whats-new:
 
 Overview
 --------
