--- a/CHANGES
+++ b/CHANGES
@@ -4,6 +4,9 @@
 Release History
 ===============
 
+**1.7** (NOT YET RELEASED)
+==========================
+
 **1.6.1** (2012-08-02)
 ======================
 
