--- a/CHANGES
+++ b/CHANGES
@@ -13,6 +13,17 @@ Minor Additions
 * The :func:`~passlib.utils.pbkdf2.pbkdf2` function and all PBKDF2-based
   hashes have been sped up by ~20% compared to Passlib 1.6.
 
+Deprecations
+------------
+:class:`passlib.utils.handlers.HasManyBackends` internal API change
+
+  Applications implementing a custom handler with multiple backends
+  should now provide :samp:`_load_backend_{name}` classmethod for each backend.
+  This is simpler, more flexible, and more explicit than the
+  previous (1.6 and earlier) API, which required a :samp:`_has_backend_{name}`
+  class property and a :samp:`_calc_checksum_{name}` method. Support
+  for the older API is deprecated, and will it be removed in Passlib 2.0.
+
 Todo
 ----
 
