--- a/CHANGES
+++ b/CHANGES
@@ -7,11 +7,21 @@ Release History
 **1.7** (NOT YET RELEASED)
 ==========================
 
-Minor Additions
----------------
-
+Major Changes
+-------------
 * The :func:`~passlib.utils.pbkdf2.pbkdf2` function and all PBKDF2-based
   hashes have been sped up by ~20% compared to Passlib 1.6.
+
+* Passlib will now detect and work around the fatal concurrency bug
+  in py-bcrypt 0.2 and earlier (a :exc:`~passlib.exc.PasslibSecurityWarning`
+  will also be issued). Nevertheless, users are *strongly* encouraged
+  to upgrade to py-bcrypt 0.3 or another bcrypt library if you are using
+  the :doc:`bcrypt </lib/passlib.hash.bcrypt>` hash.
+
+Minor Changes
+-------------
+* The shared :class:`!PasswordHash` unittests now check all hash handlers for
+  basic thread-safety (motivated by the pybcrypt 0.2 concurrency bug).
 
 Deprecations
 ------------
@@ -28,6 +38,7 @@ Todo
 ----
 
 * unittests and documentation for get_hash_info(), get_keyed_prf()
+* Thread safety audit and tests for CryptContext, HasManyBackends, and lazy-init subclasses.
 
 **1.6.1** (2012-08-02)
 ======================
