added password strength helper, contributed by Thomas Waldmann

--- a/CHANGES
+++ b/CHANGES
@@ -9,7 +9,8 @@ Release History
 
 Minor Additions
 ---------------
-* New :mod:`passlib.pwd` module added to aid in password generation.
+* New :mod:`passlib.pwd` module added to aid in password generation
+  and strength measurement (with contributions from Thomas Waldmann).
 
 * The :func:`~passlib.utils.pbkdf2.pbkdf2` function and all PBKDF2-based
   hashes have been sped up by ~20% compared to Passlib 1.6.
