django compatibility updates (should fix issue 50)
passlib.ext.django & it's tests have gotten out of sync with django,
leading to a number of UT failures, as reported in issue 50.
tests now pass on django 1.2 through 1.6

passlib.ext.django
------------------
mimic changes in django's hasher logic:
* handle unsalted_sha1 hasher (django 1.4.6+)
* check_password(): empty hashes return False, rather throw error (django 1.5+
* allow empty passwords (django 1.6+)
* generate unusuable password suffixes (django 1.6+)

passlib.hash
------------
* django_des_crypt: added "use_duplicate_salt" class attr,
  allowing tests to enable django 1.4+ style hashes which omit 1st salt.
* django_disabled: added support for django 1.6+ random suffixes

passlib.tests
-------------
* test_ext_django: lots of changes to verify django 1.5/1.6 behavior
* test_handlers_django: split django tests out of test_handlers
  to make it easiers to run django-related tests.
* added workaround for encoding glitch in salted_md5 / salted_sha1 hashers (django 1.5+)

--- a/CHANGES
+++ b/CHANGES
@@ -4,6 +4,19 @@
 Release History
 ===============
 
+**1.6.2** (NOT YET RELEASED)
+============================
+
+    Bugfix release
+
+    * *Django compatibility* -- Passlib's Django extension (:mod:`passlib.ext.django`),
+      and it's related hashes and unittests, have been updated to handle
+      some minor API changes in Django 1.5-1.6. They should now be compatible with Django 1.2 and up.
+
+    .. note::
+
+        As of Passlib 1.7, :mod:`passlib.ext.django` will require Django >= 1.4.
+
 **1.6.1** (2012-08-02)
 ======================
 
