--- a/CHANGES
+++ b/CHANGES
@@ -7,11 +7,14 @@ Release History
 **1.6.2** (NOT YET RELEASED)
 ============================
 
-    Bugfix release
+    * *BCrypt*: Added support for the `bcrypt <https://pypi.python.org/pypi/bcrypt>`_
+      library as of the possible bcrypt backends that will be used if available.
+      (:issue:`49`)
 
-    * *Django compatibility* -- Passlib's Django extension (:mod:`passlib.ext.django`),
+    * *Django*: Passlib's Django extension (:mod:`passlib.ext.django`),
       and it's related hashes and unittests, have been updated to handle
       some minor API changes in Django 1.5-1.6. They should now be compatible with Django 1.2 and up.
+      (:issue:`50`)
 
     .. note::
 
