--- a/CHANGES
+++ b/CHANGES
@@ -30,6 +30,13 @@ Release History
             As of Passlib 1.7, :mod:`passlib.ext.django` will require Django >= 1.4.
             Passlib 1.6.x is the last release that will support Django 1.3.x and earlier.
 
+    .. warning::
+
+        Unless significant feedback is received to reverse the decision,
+        **Passlib 1.7 will drop support for Python 2.5.** Too many core tools
+        (such as Setuptools, Pip, and Tox) no longer support it, making
+        testing increasingly burdensome.
+
 **1.6.1** (2012-08-02)
 ======================
 
